# productos

./: README.md
Front/productos/: package-lock.json
Front/productos/src/: App.css  App.jsx
Front/productos/src/components/: CrearProducto.jsx  ProductoList.jsx
fastapp/: productos.db  pyproject.toml
fastapp/app/: database.py  main.py  models.py  producto.py  productos.db  router.py  schemas.py
