[tool.poetry]
name = "fastapp"
version = "0.1.0"
description = "crudproductos"
authors = ["patricio"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
